# EvoLoss

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: cifar10_quick.yaml  fashion_quick.yaml  mnist_cnn_config.yaml  quick_smoke.yaml  synth_large.yaml  synth_medium.yaml
evoloss/: __init__.py  analytics.py  data_loaders.py  evaluation.py  evolution.py  symbolic_tree.py  utils.py
scripts/: export_report.py  smoke_test.py
tests/: test_analytics.py  test_analytics_plotting.py  test_evolution_ops.py  test_proxy_evaluation.py  test_symbolic_tree.py
